<resources>
    <!-- Common strings -->
    <string name="app_name">Unibar</string>
    <string name="title_login">Login</string>
    <string name="title_main_activity">Unibar</string>
    <string name="title_sign_in">Sign In</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="sign_in_unibar">Sign in with UniBar</string>
    <string name="lorem_ipsum">    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
        do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
        nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
</string>

    <!-- Login Flow -->
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">E-mail</string>
    <string name="dont_have_a_user">Dont have a user? Click here to sign up!</string>
    <string name="favoritebarlist_barlist">Favorite Bars!</string>

    <!--Facebook -->
    <string name="facebook_app_id">779131162527402</string>
    <string name="fb_login_protocol_scheme">fb779131162527402</string>
    <string name="facebook_sign_in">Continue with Facebook</string>


    <string-array name="faculty_arrays">
        <item>Science and Technology</item>
        <item>Health</item>
        <item>Arts</item>
        <item>Aarhus BSS</item>
    </string-array>

    <!-- BarProfile -->
    <string name="bar_image">Unibar</string>
    <string name="bar_name_placeholder">Bar name</string>
    <string name="bar_description_label">Description</string>
    <string name="bar_review_label">Reviews</string>
    <string name="review_label">Review</string>
    <string name="button_check_in_label">Check in</string>
    <string name="write_review">Write a review for this bar</string>


    <!-- UserProfile -->
    <string name="ProfileName_profileInfo">Mock faculty</string>
    <string name="ProfileFaculty_profileInfo">Mock name</string>
    <string name="try_these_bars">Have you tried these bars?</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_faculty">Choose faculty</string>
    <string name="search_bar">Search bar..</string>


    <!-- Tabs -->
    <string name="MapTab">Map view</string>
    <string name="ListTab">Bar list</string>
    <string name="ProfileTab">Profile</string>
    <string name="change_map_type">change map type..</string>
    <string name="find_user">Find user location..</string>

    <!-- LocationService -->
    <string name="NotificationContext"> away from you right now!</string>


</resources>
