<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:background="@drawable/review_background"
    android:gravity="center|center_horizontal"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/textViewBarName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="24dp"
        android:text="@string/bar_name_placeholder"
        android:textColor="@android:color/white"
        android:textSize="28sp" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/BarRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"

        android:stepSize="1"
        android:theme="@style/RatingBar" />
    <!--        -->

    <TextView
        android:id="@+id/textViewReviewLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write_review"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/editTextBarReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:ems="10"
        android:gravity="top|left"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:lines="5"
        android:padding="5dp" />

    <Button
        android:id="@+id/buttonReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline_1_minus_8dp"
        android:background="@drawable/transparent_border_button"
        android:text="@string/review_label"
        android:textColor="@android:color/white" />
</LinearLayout>