<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView_barImage"
                            android:layout_width="248dp"
                            android:layout_height="248dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/bar_image"
                            app:layout_constraintBottom_toTopOf="@+id/textView_BarName"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_chainStyle="packed"
                            app:srcCompat="@drawable/unibarlogo_narrow" />

                        <TextView
                            android:id="@+id/textView_BarName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginRight="4dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/bar_name_placeholder"
                            android:textSize="21sp"
                            app:layout_constraintBottom_toTopOf="@+id/textView_DescriptionLabel"
                            app:layout_constraintStart_toStartOf="@+id/imageView_barImage"
                            app:layout_constraintTop_toBottomOf="@+id/imageView_barImage" />

                        <TextView
                            android:id="@+id/textView_DescriptionLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:text="@string/bar_description_label"
                            app:layout_constraintBottom_toTopOf="@+id/textView_Description"
                            app:layout_constraintStart_toStartOf="@+id/textView_BarName"
                            app:layout_constraintTop_toBottomOf="@+id/textView_BarName" />

                        <TextView
                            android:id="@+id/textView_Description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:text="@string/lorem_ipsum"
                            app:layout_constraintBottom_toTopOf="@+id/textViewReviewLabel"
                            app:layout_constraintStart_toStartOf="@+id/textView_DescriptionLabel"
                            app:layout_constraintTop_toBottomOf="@+id/textView_DescriptionLabel" />

                        <TextView
                            android:id="@+id/textViewReviewLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginRight="4dp"
                            android:text="@string/bar_review_label"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/textView_Description"
                            app:layout_constraintTop_toBottomOf="@+id/textView_Description" />

                        <fragment
                            android:id="@+id/reviewListInBarProfileFragment"
                            android:name="com.group25.unibar.Fragments.ReviewListFragment"
                            android:layout_width="match_parent"
                            android:layout_height="141dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp" />
                </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/linearLayoutButtons"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="626dp"
            android:layout_marginBottom="16dp"
            android:clipToPadding="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="2.0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/scrollView2">

                <Button
                    android:id="@+id/button_Review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1.0"
                    android:background="@drawable/transparent_border_button"
                    android:text="@string/review_label"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/button_CheckIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1.0"
                    android:background="@drawable/transparent_border_button"
                    android:text="@string/button_check_in_label"
                    android:textColor="@android:color/white" />
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
